# IncidentData-Augmentor

./: COLLABORATORS.md  DATASHEET.md  Pipfile  README.md  assignment2.py  files.csv  functions.py  incidents.csv  setup.cfg  setup.py
assignment2/: assignment.py  main.py
tests/: test_assignment.py  test_assignment2.py  test_functions.py  test_main.py
