[metadata]
name = assignment2
version = 1.0
description = From the extracted data of assignment0 create and print the augmented data
long_description = file: README.md
long_description_content_type = text/markdown

[options]
packages = find:

[aliases]
test=pytest

[tool:pytest]
norecursedirs = .*, CVS, _darcs, {arch}, *.egg, venv

[tool.isort]
profile = "black"
